cmake_minimum_required(VERSION 3.4.1)
# FIXME looks like the build script for android needs to fix up the platform cmake as in windows/ios.
# For now I'm just dumping find to get things going
#if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/libs/eegeo/platform/CMakeLists.txt")
#    include("${CMAKE_CURRENT_SOURCE_DIR}/libs/eegeo/platform/CMakeLists.txt")
#else(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/libs/eegeo/platform/CMakeLists.txt")
#    message(FATAL_ERROR "Couldn't detect platform headers. Have you run update.platform.sh?")
#endif(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/libs/eegeo/platform/CMakeLists.txt")

#include(${CMAKE_CURRENT_SOURCE_DIR}/../src/CMakeLists.txt)
#include(${CMAKE_CURRENT_SOURCE_DIR}/../libs/CMakeLists.txt)

include_directories(
    libs/eegeo/rapidjson
    libs/eegeo/sdk-extensions/sqlite

    libs/eegeo
    libs/eegeo/curl
    libs/eegeo/curl/android-arm64-v8a
    libs/eegeo/curl/android-armeabi
    libs/eegeo/curl/android-armeabi-v7a
    libs/eegeo/curl/Windows-x64
    libs/eegeo/curl/Windows-x86
    libs/eegeo/http-parser
    libs/eegeo/httpxx
    libs/eegeo/httpxx/code
    libs/eegeo/httpxx/toolchain
    libs/eegeo/jpeg-turbo
    libs/eegeo/platform
    libs/eegeo/platform/Android
    libs/eegeo/platform/Android/Cache
    libs/eegeo/platform/Android/Input
    libs/eegeo/platform/Android/KtxTextures
    libs/eegeo/platform/Android/Sdk
    libs/eegeo/platform/AnimatedObjects
    libs/eegeo/platform/Base
    libs/eegeo/platform/Base/Model
    libs/eegeo/platform/BuildingFootprints
    libs/eegeo/platform/Camera
    libs/eegeo/platform/Camera/GlobeCamera
    libs/eegeo/platform/Camera/SplinePlayback
    libs/eegeo/platform/Collision
    libs/eegeo/platform/CollisionVisualization
    libs/eegeo/platform/Concurrency
    libs/eegeo/platform/Concurrency/Tasks
    libs/eegeo/platform/Concurrency/Tasks/Messages
    libs/eegeo/platform/Config
    libs/eegeo/platform/Culling
    libs/eegeo/platform/Data
    libs/eegeo/platform/Data/Geofencing
    libs/eegeo/platform/Data/GeoJSON
    libs/eegeo/platform/Data/Heatmaps
    libs/eegeo/platform/Data/Heatmaps/Materials
    libs/eegeo/platform/Data/PolyChart
    libs/eegeo/platform/Data/StencilArea
    libs/eegeo/platform/Data/StencilArea/Materials
    libs/eegeo/platform/DataStructures
    libs/eegeo/platform/Debug
    libs/eegeo/platform/Debug/BuildingFootprints
    libs/eegeo/platform/Debug/Commands
    libs/eegeo/platform/Debug/Commands/Camera
    libs/eegeo/platform/Debug/Commands/Coverage
    libs/eegeo/platform/Debug/Commands/Labels
    libs/eegeo/platform/Debug/Commands/Lighting
    libs/eegeo/platform/Debug/Commands/PlaceNames
    libs/eegeo/platform/Debug/Commands/Precache
    libs/eegeo/platform/Debug/Commands/Profile
    libs/eegeo/platform/Debug/Commands/Rendering
    libs/eegeo/platform/Debug/Commands/Routes
    libs/eegeo/platform/Debug/Commands/Stats
    libs/eegeo/platform/Debug/Commands/Stream
    libs/eegeo/platform/Debug/Commands/Themes
    libs/eegeo/platform/Debug/Commands/TrafficCongestion
    libs/eegeo/platform/Debug/Commands/Web
    libs/eegeo/platform/Debug/DebugRendering
    libs/eegeo/platform/Debug/DebugRendering/Renderers
    libs/eegeo/platform/Debug/DebugServer
    libs/eegeo/platform/Debug/Interiors
    libs/eegeo/platform/Debug/Labels
    libs/eegeo/platform/Debug/Picking
    libs/eegeo/platform/Debug/Profile
    libs/eegeo/platform/Debug/SplinePlayback
    libs/eegeo/platform/Emscripten
    libs/eegeo/platform/Emscripten/Debug
    libs/eegeo/platform/Emscripten/Input
    libs/eegeo/platform/Fireworks
    libs/eegeo/platform/Fonts
    libs/eegeo/platform/Fonts/BMFont
    libs/eegeo/platform/Geometry
    libs/eegeo/platform/Geometry/Intersection2d
    libs/eegeo/platform/Helpers
    libs/eegeo/platform/Helpers/DDS
    libs/eegeo/platform/Helpers/Jpeg
    libs/eegeo/platform/Icons
    libs/eegeo/platform/Input
    libs/eegeo/platform/Io
    libs/eegeo/platform/Io/AsyncModels
    libs/eegeo/platform/Io/ChunkedFileFormat
    libs/eegeo/platform/Io/POD
    libs/eegeo/platform/Labels
    libs/eegeo/platform/Lighting
    libs/eegeo/platform/Location
    libs/eegeo/platform/MapLayers
    libs/eegeo/platform/Markers
    libs/eegeo/platform/MemoryTracking
    libs/eegeo/platform/Messaging
    libs/eegeo/platform/Modules
    libs/eegeo/platform/Modules/Core
    libs/eegeo/platform/Modules/Data
    libs/eegeo/platform/Modules/Map
    libs/eegeo/platform/Modules/Map/Layers
    libs/eegeo/platform/Networking
    libs/eegeo/platform/Networking/Posix
    libs/eegeo/platform/Networking/Windows
    libs/eegeo/platform/Pins
    libs/eegeo/platform/Rendering
    libs/eegeo/platform/Rendering/AsyncTexturing
    libs/eegeo/platform/Rendering/Filters
    libs/eegeo/platform/Rendering/Geometry
    libs/eegeo/platform/Rendering/Materials
    libs/eegeo/platform/Rendering/MeshFactories
    libs/eegeo/platform/Rendering/Renderables
    libs/eegeo/platform/Rendering/Scene
    libs/eegeo/platform/Rendering/SceneModels
    libs/eegeo/platform/Rendering/SceneModels/Animation
    libs/eegeo/platform/Rendering/SceneModels/Resources
    libs/eegeo/platform/Rendering/Shaders
    libs/eegeo/platform/Rendering/VertexLayouts
    libs/eegeo/platform/Rendering/VertexTypes
    libs/eegeo/platform/Resources
    libs/eegeo/platform/Resources/Buildings
    libs/eegeo/platform/Resources/CityThemes
    libs/eegeo/platform/Resources/CityThemes/BinaryThemeParsing
    libs/eegeo/platform/Resources/Interiors
    libs/eegeo/platform/Resources/Interiors/Builder
    libs/eegeo/platform/Resources/Interiors/Entities
    libs/eegeo/platform/Resources/Interiors/Markers
    libs/eegeo/platform/Resources/Interiors/Materials
    libs/eegeo/platform/Resources/Interiors/MetaData
    libs/eegeo/platform/Resources/PlaceNames
    libs/eegeo/platform/Resources/Roads
    libs/eegeo/platform/Resources/Roads/Navigation
    libs/eegeo/platform/Resources/Terrain
    libs/eegeo/platform/Resources/Terrain/Collision
    libs/eegeo/platform/Resources/Terrain/Heights
    libs/eegeo/platform/Resources/Terrain/Lcm
    libs/eegeo/platform/Resources/Terrain/Placeholder
    libs/eegeo/platform/Resources/Terrain/Raster
    libs/eegeo/platform/Routes
    libs/eegeo/platform/Routes/Clipping
    libs/eegeo/platform/Routes/Fitting
    libs/eegeo/platform/Routes/Fitting/NavGraphConforming
    libs/eegeo/platform/Routes/Simulation
    libs/eegeo/platform/Routes/Simulation/Camera
    libs/eegeo/platform/Routes/Simulation/View
    libs/eegeo/platform/Routes/Style
    libs/eegeo/platform/Routes/Style/Thickness
    libs/eegeo/platform/Routes/View
    libs/eegeo/platform/Routes/Webservice
    libs/eegeo/platform/Search
    libs/eegeo/platform/Search/Service
    libs/eegeo/platform/Space
    libs/eegeo/platform/Streaming
    libs/eegeo/platform/Streaming/BlockCoverageTrees
    libs/eegeo/platform/Streaming/CoverageTrees
    libs/eegeo/platform/Streaming/Debug
    libs/eegeo/platform/Streaming/Payload
    libs/eegeo/platform/Streaming/Prioritisers
    libs/eegeo/platform/Streaming/Quadtree
    libs/eegeo/platform/Streaming/SceneGraph
    libs/eegeo/platform/Streaming/Stream
    libs/eegeo/platform/Streaming/Volume
    libs/eegeo/platform/Text
    libs/eegeo/platform/TextMeshes
    libs/eegeo/platform/TextMeshes/Internal
    libs/eegeo/platform/Traffic
    libs/eegeo/platform/Traffic/Config
    libs/eegeo/platform/Traffic/Themes
    libs/eegeo/platform/TrafficCongestion
    libs/eegeo/platform/UI
    libs/eegeo/platform/UI/NativeAlerts
    libs/eegeo/platform/UI/NativeAlerts/Android
    libs/eegeo/platform/UI/NativeAlerts/Windows
    libs/eegeo/platform/UI/NativeInput
    libs/eegeo/platform/UI/NativeInput/Android
    libs/eegeo/platform/UI/NativeInput/Windows
    libs/eegeo/platform/Unicode
    libs/eegeo/platform/Unity
    libs/eegeo/platform/Weather
    libs/eegeo/platform/Web
    libs/eegeo/platform/Web/Cache
    libs/eegeo/platform/Web/Cache/WebRequestCacheTasks
    libs/eegeo/platform/Windows
    libs/eegeo/platform/Windows/Cache
    libs/eegeo/platform/Windows/Input
    libs/eegeo/platform/Windows/Input/Mouse
    libs/eegeo/platform/Windows/Input/TouchScreen
    libs/eegeo/platform/WorldStates
    libs/eegeo/png
    libs/eegeo/prebuilt
    libs/eegeo/prebuilt/android-arm64-v8a
    libs/eegeo/prebuilt/android-armeabi
    libs/eegeo/prebuilt/android-armeabi-v7a
    libs/eegeo/rapidjson
    libs/eegeo/rapidjson/error
    libs/eegeo/rapidjson/internal
    libs/eegeo/sdk-extensions
    libs/eegeo/sdk-extensions/sqlite
    libs/eegeo/sdk-extensions/sqlite/sqlite3
    libs/eegeo/uv
    libs/eegeo/uv/android-arm64-v8a
    libs/eegeo/uv/android-armeabi
    libs/eegeo/uv/android-armeabi-v7a
    libs/eegeo/uv/Windows-x64
    libs/eegeo/uv/Windows-x86

    ../src
    ../src/AboutPage
    ../src/AboutPage/View
    ../src/AppCamera
    ../src/AppCamera/Helpers
    ../src/AppCamera/SdkModel
    ../src/ApplicationConfig
    ../src/ApplicationConfig/SdkModel
    ../src/AppModes
    ../src/AppModes/SdkModel
    ../src/AppModes/States
    ../src/AppModes/States/SdkModel
    ../src/AttractMode
    ../src/AttractMode/SdkModel
    ../src/AttractMode/SdkModel/States
    ../src/Avatar
    ../src/Avatar/AvatarModule
    ../src/Avatar/SdkModel
    ../src/CameraTransitions
    ../src/CameraTransitions/SdkModel
    ../src/CategorySearch
    ../src/Compass
    ../src/Compass/SdkModel
    ../src/Compass/View
    ../src/DoubleTapIndoorInteraction
    ../src/DoubleTapIndoorInteraction/SdkModel
    ../src/ExampleAppMessaging
    ../src/FixedLocation
    ../src/FlattenButton
    ../src/FlattenButton/SdkModel
    ../src/FlattenButton/View
    ../src/GpsMarker
    ../src/GpsMarker/SdkModel
    ../src/Helpers
    ../src/IndoorLocation
    ../src/IndoorLocation/SdkModel
    ../src/InitialExperience
    ../src/InitialExperience/Preload
    ../src/InitialExperience/Preload/SdkModel
    ../src/InitialExperience/SdkModel
    ../src/InitialExperience/View
    ../src/InteriorsEntitiesPins
    ../src/InteriorsEntitiesPins/SdkModel
    ../src/InteriorsExplorer
    ../src/InteriorsExplorer/SdkModel
    ../src/InteriorsExplorer/SdkModel/Highlights
    ../src/InteriorsExplorer/SdkModel/States
    ../src/InteriorsExplorer/View
    ../src/InteriorsPosition
    ../src/InteriorsPosition/SdkModel
    ../src/InteriorsPosition/SdkModel/SenionLab
    ../src/MapMode
    ../src/MapMode/SdkModel
    ../src/Menu
    ../src/Menu/View
    ../src/Metrics
    ../src/Modality
    ../src/Modality/View
    ../src/MyPinCreation
    ../src/MyPinCreation/PoiRing
    ../src/MyPinCreation/PoiRing/SdkModel
    ../src/MyPinCreation/SdkModel
    ../src/MyPinCreation/View
    ../src/MyPinCreationDetails
    ../src/MyPinCreationDetails/View
    ../src/MyPinDetails
    ../src/MyPinDetails/SdkModel
    ../src/MyPinDetails/View
    ../src/MyPins
    ../src/MyPins/SdkModel
    ../src/MyPins/View
    ../src/Net
    ../src/Net/SdkModel
    ../src/OpenableControl
    ../src/OpenableControl/View
    ../src/Options
    ../src/Options/SdkModel
    ../src/Options/View
    ../src/PersistentSettings
    ../src/PlaceJumps
    ../src/PlaceJumps/SdkModel
    ../src/PlaceJumps/View
    ../src/Reaction
    ../src/Reaction/View
    ../src/RenderingTransformMesh
    ../src/RenderingTransformMesh/SdkModel
    ../src/ReportPinsVisibilityMasking
    ../src/ReportPinsVisibilityMasking/SdkModel
    ../src/Repository
    ../src/ScreenControl
    ../src/ScreenControl/View
    ../src/Search
    ../src/Search/Combined
    ../src/Search/Combined/SdkModel
    ../src/Search/EegeoPois
    ../src/Search/EegeoPois/SdkModel
    ../src/Search/Example
    ../src/Search/Example/SdkModel
    ../src/Search/GeoNames
    ../src/Search/GeoNames/SdkModel
    ../src/Search/SdkModel
    ../src/Search/SdkModel/MyPins
    ../src/Search/Swallow
    ../src/Search/Swallow/SdkModel
    ../src/Search/Swallow/SdkModel/SearchParser
    ../src/Search/Swallow/SearchConstants
    ../src/Search/Swallow/View
    ../src/Search/Yelp
    ../src/Search/Yelp/SdkModel
    ../src/Search/Yelp/SearchConstants
    ../src/SearchMenu
    ../src/SearchMenu/SdkModel
    ../src/SearchMenu/View
    ../src/SearchResultOnMap
    ../src/SearchResultOnMap/SdkModel
    ../src/SearchResultOnMap/View
    ../src/SearchResultPoi
    ../src/SearchResultPoi/SdkModel
    ../src/SearchResultPoi/View
    ../src/SearchResultSection
    ../src/SearchResultSection/SdkModel
    ../src/SearchResultSection/View
    ../src/SettingsMenu
    ../src/SettingsMenu/SdkModel
    ../src/SettingsMenu/View
    ../src/Social
    ../src/Social/TwitterFeed
    ../src/SwallowPoiDb
    ../src/SwallowPoiDb/Constants
    ../src/SwallowPoiDb/Parsers
    ../src/TagSearch
    ../src/TagSearch/SdkModel
    ../src/TagSearch/View
    ../src/Tours
    ../src/Tours/SdkModel
    ../src/Tours/SdkModel/Camera
    ../src/Tours/SdkModel/States
    ../src/Tours/SdkModel/TourInstances
    ../src/Tours/SdkModel/TourInstances/Example
    ../src/Tours/SdkModel/TourInstances/TwitterFeed
    ../src/Tours/TourFullScreenImage
    ../src/Tours/View
    ../src/Tours/View/TourExplorer
    ../src/Tours/View/TourFullScreenImage
    ../src/URLRequest
    ../src/UserInteraction
    ../src/UserInteraction/SdkModel
    ../src/ViewControllerUpdater
    ../src/ViewControllerUpdater/View
    ../src/VirtualKeyboard
    ../src/VisualMap
    ../src/VisualMap/SdkModel
    ../src/Watermark
    ../src/Watermark/SdkModel
    ../src/Watermark/View
    ../src/WifiInfo
    ../src/WorldAreaLoader
    ../src/WorldAreaLoader/SdkModel
    ../src/WorldPins
    ../src/WorldPins/SdkModel
    ../src/WorldPins/View

    jni
    jni/AboutPage
    jni/AboutPage/View
    jni/AndroidAppThreadAssertions
    jni/ApplicationConfig
    jni/ApplicationConfig/SdkModel
    jni/Compass
    jni/Compass/View
    jni/FlattenButton
    jni/FlattenButton/View
    jni/Helpers
    jni/InitialExperience
    jni/InitialExperience/Preload
    jni/InitialExperience/Preload/SdkModel
    jni/InitialExperience/SdkModel
    jni/InitialExperience/View
    jni/InteriorsExplorer
    jni/InteriorsExplorer/View
    jni/InteriorsPosition
    jni/InteriorsPosition/SdkModel
    jni/InteriorsPosition/SdkModel/SenionLab
    jni/InteriorsPosition/View
    jni/InteriorsPosition/View/SenionLab
    jni/Menu
    jni/Menu/SdkModel
    jni/Menu/View
    jni/Metrics
    jni/ModalBackground
    jni/ModalBackground/SdkModel
    jni/ModalBackground/View
    jni/MyPinCreation
    jni/MyPinCreation/View
    jni/MyPinCreationDetails
    jni/MyPinCreationDetails/View
    jni/MyPinDetails
    jni/MyPinDetails/View
    jni/MyPins
    jni/MyPins/View
    jni/Options
    jni/Options/SdkModel
    jni/Options/View
    jni/PersistentSettings
    jni/SearchMenu
    jni/SearchMenu/View
    jni/SearchResultPoi
    jni/SearchResultPoi/View
    jni/SearchResultSection
    jni/SearchResultSection/View
    jni/SettingsMenu
    jni/SettingsMenu/View
    jni/TagSearch
    jni/TagSearch/View
    jni/Watermark
    jni/Watermark/View
    jni/WorldPins
    jni/WorldPins/View

    ../libs
    ../libs/OAuth
)

set(NDK_LIBS
	log
	android
	GLESv2
	EGL
	z
	m)

set(PREBUILT_STATIC_LIBS
	eegeo-sdk
	http-parser
	png
	turbojpeg
	curl
	eegeo-sdk-extensions-sqlite
	jpeg
	uv)

foreach(lib ${NDK_LIBS})
	find_library(${lib}-ndklib ${lib})
endforeach(lib)
foreach(lib ${PREBUILT_STATIC_LIBS})
	add_library(${lib} STATIC IMPORTED)
	set_target_properties(
		${lib}
		PROPERTIES IMPORTED_LOCATION
		${CMAKE_CURRENT_LIST_DIR}/libs/eegeo/prebuilt/android-${ANDROID_ABI}/lib${lib}.a)
endforeach(lib)

file(GLOB_RECURSE jni_SOURCES ${CMAKE_CURRENT_LIST_DIR}/jni/*.cpp)
# FIXME See top of the file.
file(GLOB_RECURSE src_SOURCES ${CMAKE_CURRENT_LIST_DIR}/../src/*.cpp)
file(GLOB_RECURSE external_SOURCES ${CMAKE_CURRENT_LIST_DIR}/../libs/*.cpp)

set(CMAKE_CPP_FLAGS  "${CMAKE_CPP_FLAGS} -Wall -Wno-expansion-to-defined -Wno-unknown-pragmas -Wno-sign-compare -Wno-format-security -Wno-reorder")
set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -fexceptions -std=c++11")
set(CMAKE_SHARED_LINKER_FLAGS  "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--stub-group-size=2085000")

add_library(ssl-prebuilt STATIC IMPORTED)
set_target_properties(ssl-prebuilt PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/libs/eegeo/prebuilt/android-${ANDROID_ABI}/libssl.a)
add_library(crypto-prebuilt STATIC IMPORTED)
set_target_properties(crypto-prebuilt PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/libs/eegeo/prebuilt/android-${ANDROID_ABI}/libcrypto.a)

add_library(eegeo-mobile-example-app
	SHARED
	${jni_SOURCES}
	${src_SOURCES}
	${external_SOURCES})
target_link_libraries(eegeo-mobile-example-app
	${PREBUILT_STATIC_LIBS}
	ssl-prebuilt
	crypto-prebuilt
	${log-ndklib}
	${atomic-ndklib}
	${android-ndklib}
	${GLESv2-ndklib}
	${EGL-ndklib}
	${z-ndklib}
	${m-ndklib})
